--- a/posts/post007_old_how_to_create_a_screenshot_system/post.mdx
+++ b/posts/post007_old_how_to_create_a_screenshot_system/post.mdx
@@ -20,7 +20,7 @@ Have you ever wanted to be able to take screenshots of your game? In this tutori
 
 The code is simple to follow: we check if the `F5` key is pressed, if yes we take a screenshot of the window by calling the function `capture()` which we save to a `sf::Image` and export the `sf::Image` to an image file in a folder named “screenshots”. The file name will be the actual date and actual time of the system when the screenshot will be taken.
 
-```ts[class="line-numbers"]
+```ts showLineNumbers
 #include <SFML/Graphics.hpp>
 #include <iostream>
 #include <ctime>
