--- a/posts/post011_always_use_promise_all/post.mdx
+++ b/posts/post011_always_use_promise_all/post.mdx
@@ -32,7 +32,7 @@ code was not handling a promise inside a try/catch block. But how?
 
 Let see the next code:
 
-```javascript showLineNumbers
+```js showLineNumbers
 const streams = {
     firstStepStream: (req, res) => {
         res.streams = [];
