--- a/projects/airportlabs-communityapp/project.mdx
+++ b/projects/airportlabs-communityapp/project.mdx
@@ -17,16 +17,22 @@ url: "https://airportlabs.com/product-tours/airport-community-app"
 otherImages:
   - png: "/imgs/projects/airportlabs-communityapp/image1.png"
     webp: "/imgs/projects/airportlabs-communityapp/image1.webp"
+    alt: "the home screen"
   - png: "/imgs/projects/airportlabs-communityapp/image2.png"
     webp: "/imgs/projects/airportlabs-communityapp/image2.webp"
+    alt: "the menu"
   - png: "/imgs/projects/airportlabs-communityapp/image3.png"
     webp: "/imgs/projects/airportlabs-communityapp/image3.webp"
+    alt: "the flights screen"
   - png: "/imgs/projects/airportlabs-communityapp/image4.png"
     webp: "/imgs/projects/airportlabs-communityapp/image4.webp"
+    alt: "the acdm screen from a flight"
   - png: "/imgs/projects/airportlabs-communityapp/image5.png"
     webp: "/imgs/projects/airportlabs-communityapp/image5.webp"
+    alt: "on-time-departures statistics screen"
   - png: "/imgs/projects/airportlabs-communityapp/image6.png"
     webp: "/imgs/projects/airportlabs-communityapp/image6.webp"
+    alt: "the canceled flights screen"
 yearsActive: [2022, "present"]
 techStack:
   - PHP
