--- a/projects/imocentral-ro/project.mdx
+++ b/projects/imocentral-ro/project.mdx
@@ -1,23 +1,34 @@
 ---
 title: "imocentral.ro"
-thumbnail: "/imgs/projects/imocentral.ro/cover.jpg"
-cover: "/imgs/projects/imocentral.ro/image1.jpeg"
+thumbnail: "/imgs/projects/imocentral.ro/thumbnail.jpg"
+cover:
+  png: "/imgs/projects/imocentral.ro/cover.png"
+  webp: "/imgs/projects/imocentral.ro/cover.webp"
 tags:
   - NextJS
 description: "Real estate website optimized for speed and for Googlebot"
 pinned: 2
 url: "https://imocentral.ro"
 otherImages:
-  - src: "/imgs/projects/imocentral.ro/image1.jpeg"
+  - png: "/imgs/projects/imocentral.ro/image1.jpeg"
+    webp: "/imgs/projects/imocentral.ro/image1.webp"
     alt: "bla bla bla bal"
-  - "/imgs/projects/imocentral.ro/image3.jpeg"
-  - "/imgs/projects/imocentral.ro/image4.jpeg"
-  - "/imgs/projects/imocentral.ro/image2.jpeg"
-  - "/imgs/projects/imocentral.ro/image5.jpeg"
-  - "/imgs/projects/imocentral.ro/image6.jpeg"
-  - "/imgs/projects/imocentral.ro/image7.jpeg"
-  - "/imgs/projects/imocentral.ro/image8.jpeg"
-  - "/imgs/projects/imocentral.ro/image9.jpeg"
+  - png: "/imgs/projects/imocentral.ro/image3.jpeg"
+    webp: "/imgs/projects/imocentral.ro/image3.webp"
+  - png: "/imgs/projects/imocentral.ro/image4.jpeg"
+    webp: "/imgs/projects/imocentral.ro/image4.webp"
+  - png: "/imgs/projects/imocentral.ro/image2.jpeg"
+    webp: "/imgs/projects/imocentral.ro/image2.webp"
+  - png: "/imgs/projects/imocentral.ro/image5.jpeg"
+    webp: "/imgs/projects/imocentral.ro/image5.webp"
+  - png: "/imgs/projects/imocentral.ro/image6.jpeg"
+    webp: "/imgs/projects/imocentral.ro/image6.webp"
+  - png: "/imgs/projects/imocentral.ro/image7.jpeg"
+    webp: "/imgs/projects/imocentral.ro/image7.webp"
+  - png: "/imgs/projects/imocentral.ro/image8.jpeg"
+    webp: "/imgs/projects/imocentral.ro/image8.webp"
+  - png: "/imgs/projects/imocentral.ro/image9.jpeg"
+    webp: "/imgs/projects/imocentral.ro/image9.webp"
 useCoverImage: 1
 urlPart: imocentral-ro
 yearsActive: [2017, 2022]
