--- a/projects/laikado-es/project.mdx
+++ b/projects/laikado-es/project.mdx
@@ -1,21 +1,21 @@
 ---
 title: "laikado.es"
-thumbnail: "/imgs/projects/004_laikado.es/cover.jpg"
-cover: "/imgs/projects/004_laikado.es/image1.jpeg"
+thumbnail: "/imgs/projects/laikado.es/cover.jpg"
+cover: "/imgs/projects/laikado.es/image1.jpeg"
 tags:
   - NodeJS
 description: "Real estate ad vehicles aggregator portal"
 pinned: 6
 url: "https://www.laikado.es"
 otherImages:
-  - "/imgs/projects/004_laikado.es/image1.jpeg"
-  - "/imgs/projects/004_laikado.es/image3.jpeg"
-  - "/imgs/projects/004_laikado.es/image4.jpeg"
-  - "/imgs/projects/004_laikado.es/image2.jpeg"
-  - "/imgs/projects/004_laikado.es/image5.jpeg"
-  - "/imgs/projects/004_laikado.es/image6.jpeg"
-  - "/imgs/projects/004_laikado.es/image7.jpeg"
-  - "/imgs/projects/004_laikado.es/image8.jpeg"
+  - "/imgs/projects/laikado.es/image1.jpeg"
+  - "/imgs/projects/laikado.es/image3.jpeg"
+  - "/imgs/projects/laikado.es/image4.jpeg"
+  - "/imgs/projects/laikado.es/image2.jpeg"
+  - "/imgs/projects/laikado.es/image5.jpeg"
+  - "/imgs/projects/laikado.es/image6.jpeg"
+  - "/imgs/projects/laikado.es/image7.jpeg"
+  - "/imgs/projects/laikado.es/image8.jpeg"
 urlPart: laikado-es
 yearsActive: [2022, 2024]
 techStack:
