--- a/posts/post005_old_how_to_flip_sprites/post.mdx
+++ b/posts/post005_old_how_to_flip_sprites/post.mdx
@@ -25,25 +25,25 @@ When you create games, and not only, you will sometimes need to flip sprites( e.
 
 You can flip the sprite by modifying the sprite’s scale when you have a static sprite( no changes to the texture or texture rect). You only need to negate one or both values of the sprite’s scale.
 
-```ts[class="line-numbers"]
+```ts showLineNumbers
 sprite.setScale(x, y);
 ```
 
 By negating the first value/horizontal scale you will obtain a flipped sprite on the horizontal axis.
 
-```ts[class="line-numbers"]
+```ts showLineNumbers
 sprite.setScale(-1, 1);
 ```
 
 By negating the second value/vertical scale you will obtain a flipped sprite on the vertical axis.
 
-```ts[class="line-numbers"]
+```ts showLineNumbers
 sprite.setScale(1, -1);
 ```
 
 And by negating both values you will obtain a flipped sprite on both axes.
 
-```ts[class="line-numbers"]
+```ts showLineNumbers
 sprite.setScale(-1, -1);
 ```
 
@@ -51,19 +51,19 @@ If you don’t have a static sprite and you need to create an animation, or load
 
 If you want to flip the horizontal axis you will need to set the texture rect such that the texture rect is flipped:
 
-```ts[class="line-numbers"]
+```ts showLineNumbers
 sprite.setTextureRect(sf::IntRect(x + width,y,-width,height)
 ```
 
 Same for flipping the vertical axis:
 
-```ts[class="line-numbers"]
+```ts showLineNumbers
 sprite.setTextureRect(sf::IntRect(x,y + height,width,-height)
 ```
 
 And if you want to flip the both axes:
 
-```ts[class="line-numbers"]
+```ts showLineNumbers
 sprite.setTextureRect(sf::IntRect(x + width,y + height,-width,-height)
 ```
 
